@@ -163,11 +163,11 @@ Table of contents</h2>
 <p>This specification defines a set of CSS properties that affect the visual rendering of elements to which
   those properties are applied; these effects are applied after elements have been sized and positioned according
   to the <a href="http://www.w3.org/TR/CSS2/visuren.html" title="Visual formatting model">Visual formatting model</a>
-  from [[!CSS21]]. Some values of these properties result in the creation of a
-  <a href="http://www.w3.org/TR/CSS2/visuren.html#containing-block" title="Visual formatting model">containing block</a>,
-  and/or the creation of a <a href="http://www.w3.org/TR/CSS2/visuren.html#z-index" title="Visual formatting model">stacking
-  context</a>.
-</p>
+  from [[!CSS21]]. Some values of these properties result in the creation of a <a href="http://www.w3.org/TR/CSS2/visuren.html#z-index" title="Visual formatting model">stacking context</a>.
+
+<p>The compositing model follows the SVG compositing model [[!SVG11]]: first any filter effect [[FILTER-EFFECTS]] is
+ applied, then any clipping, masking and opacity [[CSS3COLOR]]. These effects all apply after any other CSS effects
+ such as 'border' [[!CSS3BG]].
 
 <h2 id="values">Values</h2>
 
@@ -300,9 +300,7 @@ Table of contents</h2>
 </p>
 
 <p>
-  The compositing model follows the SVG compositing model [[!SVG11]]: first any filter effect is applied, then any
-  clipping, masking and opacity. These effects all apply after any other CSS effects such as 'border'. As per SVG, the
-  application of 'mask' or 'mask-image' has no effect on hit-testing.
+  As per SVG, the application of 'mask' or 'mask-image' has no effect on hit-testing.
 </p>
 
 <h3 id="layering">Layering Multiple Mask Images</h3>
