@@ -368,10 +368,18 @@
    title="Visual formatting model">Visual formatting model</a> from <a
    href="#CSS21" rel=biblioentry>[CSS21]<!--{{!CSS21}}--></a>. Some values of
    these properties result in the creation of a <a
-   href="http://www.w3.org/TR/CSS2/visuren.html#containing-block"
-   title="Visual formatting model">containing block</a>, and/or the creation
-   of a <a href="http://www.w3.org/TR/CSS2/visuren.html#z-index"
+   href="http://www.w3.org/TR/CSS2/visuren.html#z-index"
    title="Visual formatting model">stacking context</a>.
+
+  <p>The compositing model follows the SVG compositing model <a href="#SVG11"
+   rel=biblioentry>[SVG11]<!--{{!SVG11}}--></a>: first any filter effect <a
+   href="#FILTER-EFFECTS"
+   rel=biblioentry>[FILTER-EFFECTS]<!--{{FILTER-EFFECTS}}--></a> is applied,
+   then any clipping, masking and opacity <a href="#CSS3COLOR"
+   rel=biblioentry>[CSS3COLOR]<!--{{CSS3COLOR}}--></a>. These effects all
+   apply after any other CSS effects such as ‘<code
+   class=property>border</code>’ <a href="#CSS3BG"
+   rel=biblioentry>[CSS3BG]<!--{{!CSS3BG}}--></a>.
 
   <h2 id=values><span class=secno>3. </span>Values</h2>
 
@@ -534,14 +542,9 @@
    ‘<a href="#mask-image"><code class=property>mask-image</code></a>’
    properties have no effect on the geometry of any element's CSS boxes.
 
-  <p> The compositing model follows the SVG compositing model <a
-   href="#SVG11" rel=biblioentry>[SVG11]<!--{{!SVG11}}--></a>: first any
-   filter effect is applied, then any clipping, masking and opacity. These
-   effects all apply after any other CSS effects such as ‘<code
-   class=property>border</code>’. As per SVG, the application of ‘<a
-   href="#mask"><code class=property>mask</code></a>’ or ‘<a
-   href="#mask-image"><code class=property>mask-image</code></a>’ has no
-   effect on hit-testing.
+  <p> As per SVG, the application of ‘<a href="#mask"><code
+   class=property>mask</code></a>’ or ‘<a href="#mask-image"><code
+   class=property>mask-image</code></a>’ has no effect on hit-testing.
 
   <h3 id=layering><span class=secno>5.1. </span>Layering Multiple Mask Images</h3>
 
@@ -3942,6 +3945,16 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
     Module.</cite></a> 4 August 2011. W3C Working Draft. (Work in progress.)
     URL: <a
     href="http://www.w3.org/TR/2011/WD-cssom-view-20110804/">http://www.w3.org/TR/2011/WD-cssom-view-20110804/</a>
+   </dd>
+   <!---->
+
+   <dt id=FILTER-EFFECTS>[FILTER-EFFECTS]
+
+   <dd>Vincent Hardy; et al. <a
+    href="http://www.w3.org/TR/2012/WD-filter-effects-20121025/"><cite>Filter
+    Effects 1.0.</cite></a> 25 October 2012. W3C Working Draft. (Work in
+    progress.) URL: <a
+    href="http://www.w3.org/TR/2012/WD-filter-effects-20121025/">http://www.w3.org/TR/2012/WD-filter-effects-20121025/</a>
    </dd>
    <!---->
   </dl>
