@@ -1,4 +1,7 @@
 2013-04-03  Dirk Schulze  <dschulze@adobe.com>
+	Move visible effect paint order definition to module interaction.
+
+2013-04-03  Dirk Schulze  <dschulze@adobe.com>
 	Incorporated more feedback from fantasai:
 	- fixed definition of child
 	- fixed definition of select()
